# nus_lease

./: .gitignore  README.en.md  README.md  index.html  pyproject.toml
.github/workflows/: deploy-pages.yml
data/config/: subzone_district_overrides.json
data/fixtures/: demo_market_snapshot.json
data/processed/: district_label_points.json  market_snapshot.json
data/raw/: district_centroids.json
scripts/: build_demo_fixture.py  build_district_boundaries.py  build_market_snapshot.py  fetch_district_centroids.py  fetch_hdb_rentals.py  fetch_planning_area_boundaries.py  fetch_propertyguru_live.py  fetch_subzone_boundaries.py  fetch_ura_private_rentals.py  import_propertyguru_html.py
src/nus_lease/: __init__.py  aggregation.py  constants.py  hdb.py  onemap.py  postal_districts.py  propertyguru.py  svy21.py  time_utils.py  ura.py
web/: app.js  index.html  styles.css
