[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nus-lease"
version = "0.1.0"
description = "Singapore rental market dashboard with official URA transactions and live listing adapters."
requires-python = ">=3.13"
dependencies = [
  "beautifulsoup4>=4.14.0",
  "playwright>=1.58.0",
]

[tool.setuptools.packages.find]
where = ["src"]
